--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,11 @@ dependencies {
     compile "com.yuyakaido.android:card-stack-view:1.0.0-beta8"
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+    implementation "android.arch.lifecycle:runtime:1.0.3"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
+    implementation "android.arch.lifecycle:common-java8:1.0.0"
+    implementation "android.arch.lifecycle:extensions:1.0.0"
+    testImplementation "android.arch.core:core-testing:1.0.0"
+    implementation "android.arch.lifecycle:reactivestreams:1.0.0"
+
 }
