--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         google()
         mavenCentral()
         jcenter()
+        maven { url 'https://maven.google.com' }
     }
 }
 
