firebase func and retrofit, can get data

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,20 @@ dependencies {
     kapt 'com.google.dagger:dagger-android-processor:2.14.1'
     kapt 'com.google.dagger:dagger-compiler:2.14.1'
 
+    //retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-moshi:2.3.0'
+
+    //Coroutines
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.21"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.21"
+    compile 'ru.gildor.coroutines:kotlin-coroutines-retrofit:0.9.0'
+
+    compile 'co.metalab.asyncawait:asyncawait:1.0.0'
+
+}
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
 }
