--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-moshi:2.3.0'
 
     //Coroutines
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.21"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.21"
-    compile 'ru.gildor.coroutines:kotlin-coroutines-retrofit:0.9.0'
+//    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.21"
+//    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.21"
+//    compile 'ru.gildor.coroutines:kotlin-coroutines-retrofit:0.9.0'
 
     compile 'co.metalab.asyncawait:asyncawait:1.0.0'
 
