--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,15 +41,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile "com.yuyakaido.android:card-stack-view:1.0.0-beta8"
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     kapt 'com.github.bumptech.glide:compiler:4.4.0'
-    implementation "android.arch.lifecycle:runtime:1.0.3"
-    kapt "android.arch.lifecycle:compiler:1.0.0"
-    implementation "android.arch.lifecycle:common-java8:1.0.0"
-    implementation "android.arch.lifecycle:extensions:1.0.0"
-    testImplementation "android.arch.core:core-testing:1.0.0"
-    implementation "android.arch.lifecycle:reactivestreams:1.0.0"
+    implementation "android.arch.lifecycle:runtime:1.1.0"
+    kapt "android.arch.lifecycle:compiler:1.1.0"
+    implementation "android.arch.lifecycle:common-java8:1.1.0"
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    testImplementation "android.arch.core:core-testing:1.1.0"
+    implementation "android.arch.lifecycle:reactivestreams:1.1.0"
     kapt "com.android.databinding:compiler:$compiler_version"
 
     //dagger
@@ -67,7 +66,9 @@ dependencies {
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.21"
     compile 'ru.gildor.coroutines:kotlin-coroutines-retrofit:0.9.0'
 
-    compile 'co.metalab.asyncawait:asyncawait:1.0.0'
+    compile 'com.android.support:recyclerview-v7:27.0.2'
+
+    compile 'com.github.nitrico.lastadapter:lastadapter:2.3.0'
 
 }
 kotlin {
