--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,15 +41,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile "com.yuyakaido.android:card-stack-view:1.0.0-beta8"
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     kapt 'com.github.bumptech.glide:compiler:4.4.0'
-    implementation "android.arch.lifecycle:runtime:1.0.3"
-    kapt "android.arch.lifecycle:compiler:1.0.0"
-    implementation "android.arch.lifecycle:common-java8:1.0.0"
-    implementation "android.arch.lifecycle:extensions:1.0.0"
-    testImplementation "android.arch.core:core-testing:1.0.0"
-    implementation "android.arch.lifecycle:reactivestreams:1.0.0"
+    implementation "android.arch.lifecycle:runtime:1.1.0"
+    kapt "android.arch.lifecycle:compiler:1.1.0"
+    implementation "android.arch.lifecycle:common-java8:1.1.0"
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    testImplementation "android.arch.core:core-testing:1.1.0"
+    implementation "android.arch.lifecycle:reactivestreams:1.1.0"
     kapt "com.android.databinding:compiler:$compiler_version"
 
     //dagger
@@ -58,4 +57,22 @@ dependencies {
     kapt 'com.google.dagger:dagger-android-processor:2.14.1'
     kapt 'com.google.dagger:dagger-compiler:2.14.1'
 
+    //retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-moshi:2.3.0'
+
+    //Coroutines
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.21"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.21"
+    compile 'ru.gildor.coroutines:kotlin-coroutines-retrofit:0.9.0'
+
+    compile 'com.android.support:recyclerview-v7:27.0.2'
+
+    compile 'com.github.nitrico.lastadapter:lastadapter:2.3.0'
+
+}
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
 }
